--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>ru.akutepov</groupId>
-  <artifactId>ormlite-example</artifactId>
+  <artifactId>equity-calculator</artifactId>
   <packaging>jar</packaging>
   <version>1.0</version>
-  <name>ormlite-example</name>
+  <name>equity-calculator</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
